--- a/docs/Homework2.ipynb
+++ b/docs/Homework2.ipynb
@@ -194,6 +194,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.7320508075688772\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "vec1 = np.array([1,2,3]).reshape(3,1)\n",
+    "vec2 = np.array([2,3,4]).reshape(3,1)\n",
+    "print(np.linalg.norm(vec1-vec2))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
